--- a/client/kontakt/index.html
+++ b/client/kontakt/index.html
@@ -25,9 +25,16 @@
             <a href="../kontakt" class="link">
                 <h1 class="navlink_kontakt">KONTAKT</h1>
             </a>
+            <h1 id="openNav">&#9776; </h1>
         </div>
     </div>
-
+    <div class="hiddenNav flex">
+        <h1 id="closeNav">&#x2715;</h1>
+        <a href="../omOss/" class="hiddenLink">OM OSS</a>
+        <a href="/#pakker" class="hiddenLink">PAKKER</a>
+        <a href="/#portfolio" class="hiddenLink">ARBEID</a>
+        <a href="../kontakt/" class="hiddenLink">KONTAKT</a>
+    </div>
     <form class="kontaktInfoHolder flex">
         <h1 class="kontaktTitle">SPØR OSS OM ALT</h1>
         <input type="text" id="navn" class="emailInputs" required placeholder="NAVN">
