--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -24,7 +24,16 @@
             <a href="../kontakt" class="link">
                 <h1 class="navlink_kontakt">KONTAKT</h1>
             </a>
+            <h1 id="openNav">&#9776; </h1>
+
         </div>
+    </div>
+    <div class="hiddenNav flex">
+        <h1 id="closeNav">&#x2715;</h1>
+        <a href="../omOss/" class="hiddenLink">OM OSS</a>
+        <a href="/#pakker" class="hiddenLink">PAKKER</a>
+        <a href="/#portfolio" class="hiddenLink">ARBEID</a>
+        <a href="../kontakt/" class="hiddenLink">KONTAKT</a>
     </div>
     <div class="aboutWelcome flex">
         <h1 class="aboutTitle">Omdan dine ideer til vakre nettsider – Uanstrengt</h1>
