--- a/client/kontakt/index.html
+++ b/client/kontakt/index.html
@@ -27,7 +27,7 @@
             </a>
             <h1 id="openNav">&#9776; </h1>
         </div>
-    </div>
+    </div>x
     <div class="hiddenNav flex">
         <h1 id="closeNav">&#x2715;</h1>
         <a href="../omOss/" class="hiddenLink">OM OSS</a>
