Added mobile version for "om oss"

--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -55,6 +55,7 @@
                 behov.</h1>
         </div>
         <img src="../bilder/AboutUsImage.jpeg" alt="om oss bilde" class="mainImage">
+        <h1 class="hiddenIntro">Våre planer</h1>
     </div>
     <div class="servicesHolder flex">
         <h1 class="serviceTitle">Våre tjenester</h1>
@@ -91,9 +92,12 @@
         <h1 class="aboutContactText">Klar til å ta det neste steget? Kontakt oss i dag og ta bedriften din til neste
             nivå.</h1>
         <form action="" class="aboutContact flex">
-            <input type="text" class="aboutContactInput" placeholder="Navn" required id="navn">
-            <input type="number" class="aboutContactInput" placeholder="Telefonnummer" id="telefon" required>
-            <input type="email" class="aboutContactInput" placeholder="E-post" required id="Email">
+            <div class="aboutInputDiv">
+                <input type="text" class="aboutContactInput" placeholder="Navn" required id="navn">
+                <input type="number" class="aboutContactInput" placeholder="Telefonnummer" id="telefon" required>
+                <input type="email" class="aboutContactInput" placeholder="E-post" required id="Email">
+
+            </div>
             <textarea id="aboutContactMessage" cols="30" rows="10" required></textarea>
             <div class="aboutBtnDiv">
                 <input type="submit" value="SEND" class="aboutContactBtn">
