Changes the navigation bar on mobile

--- a/client/kontakt/index.html
+++ b/client/kontakt/index.html
@@ -25,15 +25,23 @@
             <a href="../kontakt" class="link">
                 <h1 class="navlink_kontakt">KONTAKT</h1>
             </a>
-            <h1 id="openNav">&#9776; </h1>
         </div>
-    </div>x
-    <div class="hiddenNav flex">
-        <h1 id="closeNav">&#x2715;</h1>
-        <a href="../omOss/" class="hiddenLink">OM OSS</a>
-        <a href="/#pakker" class="hiddenLink">PAKKER</a>
-        <a href="/#portfolio" class="hiddenLink">ARBEID</a>
-        <a href="../kontakt/" class="hiddenLink">KONTAKT</a>
+    </div>
+    <div class="hiddenNavbar flex">
+        <div class="hiddenNav flex">
+            <a href="../omOss/" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/omoss-header.png" alt="link to om oss">
+            </a>
+            <a href="/#pakker" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/diamond-header.png" alt="link til våre pakker">
+            </a>
+            <a href="/#portfolio" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/arbeid-header.png" alt="link til portfolio-en">
+            </a>
+            <a href="../kontakt" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/mail-header.png" alt="link til kontakt">
+            </a>
+        </div>
     </div>
     <form class="kontaktInfoHolder flex">
         <h1 class="kontaktTitle">SPØR OSS OM ALT</h1>
