--- a/client/index/index.html
+++ b/client/index/index.html
@@ -28,16 +28,29 @@
             <a href="../kontakt" class="link">
                 <h1 class="navlink_kontakt">KONTAKT</h1>
             </a>
-            <h1 id="openNav">&#9776; </h1>
-
         </div>
     </div>
     <div class="hiddenNav flex">
-        <h1 id="closeNav">&#x2715;</h1>
-        <a href="../omOss/" class="hiddenLink">OM OSS</a>
-        <a href="/#pakker" class="hiddenLink">PAKKER</a>
-        <a href="/#portfolio" class="hiddenLink">ARBEID</a>
-        <a href="../kontakt/" class="hiddenLink">KONTAKT</a>
+        <div class="hiddenNavBar flex">
+            <a href="../omOss/" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/omoss-header.png" alt="link to om oss">
+            </a>
+            <a href="/#pakker" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/diamond-header.png" alt="link til våre pakker">
+            </a>
+            <a href="/#portfolio" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/arbeid-header.png" alt="link til portfolio-en">
+            </a>
+            <a href="../kontakt" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/mail-header.png" alt="link til kontakt">
+            </a>
+        </div>
+        <div class="hiddenNavDesc flex">
+            <a href="../omOss/" class="hiddenlinkDesc">OM OSS</a>
+            <a href="/#pakker" class="hiddenlinkDesc">PAKKER</a>
+            <a href="/#portfolio" class="hiddenlinkDesc">ARBEID</a>
+            <a href="../kontakt" class="hiddenlinkDesc">KONTAKT</a>
+        </div>
     </div>
     <div class="landingHolder flex">
         <div class="landingTekstHolder ">
@@ -237,7 +250,7 @@
         var x = window.matchMedia("(max-width: 600px)")
         if (x.matches) {
             var swiper = new Swiper(".mySwiper", {
-                slidesPerView: 1.2,
+                slidesPerView: 1.4,
                 spaceBetween: 60,
                 pagination: {
                     el: ".swiper-pagination",
