--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -24,16 +24,26 @@
             <a href="../kontakt" class="link">
                 <h1 class="navlink_kontakt">KONTAKT</h1>
             </a>
-            <h1 id="openNav">&#9776; </h1>
-
         </div>
     </div>
-    <div class="hiddenNav flex">
-        <h1 id="closeNav">&#x2715;</h1>
-        <a href="../omOss/" class="hiddenLink">OM OSS</a>
-        <a href="/#pakker" class="hiddenLink">PAKKER</a>
-        <a href="/#portfolio" class="hiddenLink">ARBEID</a>
-        <a href="../kontakt/" class="hiddenLink">KONTAKT</a>
+    <div class="hiddenNavbar flex">
+        <div class="hiddenNav flex">
+            <a href="../omOss/" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/omoss-header.png" alt="link to om oss">
+            </a>
+            <a href="/#pakker" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/diamond-header.png" alt="link til våre pakker">
+            </a>
+            <a href="/#portfolio" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/arbeid-header.png" alt="link til portfolio-en">
+            </a>
+            <a href="../kontakt" class="hiddenlink">
+                <img class="hiddenImage" src="../bilder/mail-header.png" alt="link til kontakt">
+            </a>
+        </div>
+        <div class="hiddenUnderText">
+            <a href="../omOss/"></a>
+        </div>
     </div>
     <div class="aboutWelcome flex">
         <h1 class="aboutTitle">Omdan dine ideer til vakre nettsider – Uanstrengt</h1>
