fixed some oversites regarding the updated navbar on mobile

--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -26,8 +26,8 @@
             </a>
         </div>
     </div>
-    <div class="hiddenNavbar flex">
-        <div class="hiddenNav flex">
+    <div class="hiddenNav flex">
+        <div class="hiddenNavBar flex">
             <a href="../omOss/" class="hiddenlink">
                 <img class="hiddenImage" src="../bilder/omoss-header.png" alt="link to om oss">
             </a>
@@ -41,8 +41,11 @@
                 <img class="hiddenImage" src="../bilder/mail-header.png" alt="link til kontakt">
             </a>
         </div>
-        <div class="hiddenUnderText">
-            <a href="../omOss/"></a>
+        <div class="hiddenNavDesc flex">
+            <a href="../omOss/" class="hiddenlinkDesc">OM OSS</a>
+            <a href="/#pakker" class="hiddenlinkDesc">PAKKER</a>
+            <a href="/#portfolio" class="hiddenlinkDesc">ARBEID</a>
+            <a href="../kontakt" class="hiddenlinkDesc">KONTAKT</a>
         </div>
     </div>
     <div class="aboutWelcome flex">
