--- a/client/kontakt/index.html
+++ b/client/kontakt/index.html
@@ -27,8 +27,8 @@
             </a>
         </div>
     </div>
-    <div class="hiddenNavbar flex">
-        <div class="hiddenNav flex">
+    <div class="hiddenNav flex">
+        <div class="hiddenNavBar flex">
             <a href="../omOss/" class="hiddenlink">
                 <img class="hiddenImage" src="../bilder/omoss-header.png" alt="link to om oss">
             </a>
@@ -41,6 +41,12 @@
             <a href="../kontakt" class="hiddenlink">
                 <img class="hiddenImage" src="../bilder/mail-header.png" alt="link til kontakt">
             </a>
+        </div>
+        <div class="hiddenNavDesc flex">
+            <a href="../omOss/" class="hiddenlinkDesc">OM OSS</a>
+            <a href="/#pakker" class="hiddenlinkDesc">PAKKER</a>
+            <a href="/#portfolio" class="hiddenlinkDesc">ARBEID</a>
+            <a href="../kontakt" class="hiddenlinkDesc">KONTAKT</a>
         </div>
     </div>
     <form class="kontaktInfoHolder flex">
