Altered the kontakt form on "om oss"

--- a/client/index/index.html
+++ b/client/index/index.html
@@ -174,7 +174,7 @@
                         <h1 class="perk">&#10003; TILPASSET DESIGN</h1>
                         <h1 class="perk">&#10003; HOSTING</h1>
                     </div>
-                    <h1 class="packageBtn">PREVIEW</h1>
+                    <a href="" class="packageBtn">PREVIEW</a>
                 </div>
                 <div class="package flex" id="advanced">
                     <h1 class="packageDiamond"> &#9672;</h1>
@@ -193,7 +193,7 @@
                         <h1 class="perk">&#10003; HANDLEKURV (valgfri)</h1>
                         <h1 class="perk">&#10003; HOSTING</h1>
                     </div>
-                    <h1 class="packageBtn">PREVIEW</h1>
+                    <a href="" class="packageBtn">PREVIEW</a>
                 </div>
                 <div class="package flex">
                     <h1 class="packageDiamond">&#10070; </h1>
@@ -214,7 +214,7 @@
                         <h1 class="perk">&#10003; BRUKER SIGN UP/LOGIN</h1>
                         <h1 class="perk">&#10003; HOSTING</h1>
                     </div>
-                    <h1 class="packageBtn">PREVIEW</h1>
+                    <a href="" class="packageBtn">PREVIEW</a>
                 </div>
             </div>
         </div>
