--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -101,15 +101,14 @@
 
     </div>
     <div class="aboutContactHolder flex">
-        <h1 class="aboutContactTitle">Kontakt</h1>
+        <h1 class="aboutContactTitle">Kontakt oss</h1>
         <h1 class="aboutContactText">Klar til å ta det neste steget? Kontakt oss i dag og ta bedriften din til neste
             nivå.</h1>
         <form action="" class="aboutContact flex">
             <div class="aboutInputDiv">
-                <input type="text" class="aboutContactInput" placeholder="Navn" required id="navn">
-                <input type="number" class="aboutContactInput" placeholder="Telefonnummer" id="telefon" required>
-                <input type="email" class="aboutContactInput" placeholder="E-post" required id="Email">
-
+                <input type="text" class="aboutContactInput" placeholder="Navn..." required id="navn">
+                <input type="number" class="aboutContactInput" placeholder="Telefonnummer..." id="telefon" required>
+                <input type="email" class="aboutContactInput" placeholder="E-post..." required id="Email">
             </div>
             <textarea id="aboutContactMessage" cols="30" rows="10" required></textarea>
             <div class="aboutBtnDiv">
