Fixed contact uss pages, small bug fixes

--- a/client/index/index.html
+++ b/client/index/index.html
@@ -231,7 +231,7 @@
                 <h1 class="kopoTekst">Portfolio</h1>
             </a>
             <a href="/#pakker" class="kopoTekst">
-                <h1 class="kopoTekst">Pricing</h1>
+                <h1 class="kopoTekst">Priser</h1>
             </a>
         </div>
         <div class="kopoOther">
