--- a/client/omOss/index.html
+++ b/client/omOss/index.html
@@ -107,10 +107,10 @@
         <form action="" class="aboutContact flex">
             <div class="aboutInputDiv">
                 <input type="text" class="aboutContactInput" placeholder="Navn..." required id="navn">
-                <input type="number" class="aboutContactInput" placeholder="Telefonnummer..." id="telefon" required>
+                <input type="number" class="aboutContactInput aboutTelef" placeholder="Telefonnummer..." id="telefon" required>
                 <input type="email" class="aboutContactInput" placeholder="E-post..." required id="Email">
             </div>
-            <textarea id="aboutContactMessage" cols="30" rows="10" required></textarea>
+            <textarea id="aboutContactMessage" cols="30" rows="10" required placeholder="Melding..."></textarea>
             <div class="aboutBtnDiv">
                 <input type="submit" value="SEND" class="aboutContactBtn">
             </div>
@@ -124,7 +124,7 @@
         <div class="kopoOther">
             <h1 class="kopoTitle">Produkt</h1>
             <a href="/#portfolio" class="kopoTekst"><h1 class="kopoTekst">Portfolio</h1></a>
-            <a href="/#pakker" class="kopoTekst"><h1 class="kopoTekst">Pricing</h1></a>
+            <a href="/#pakker" class="kopoTekst"><h1 class="kopoTekst">Priser</h1></a>
         </div>
         <div class="kopoOther">
             <h1 class="kopoTitle">Selvskap</h1>
